--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
         </div>
       </div>
     </div>
+    <div id="validatebox" class="validatebox">
+      <p>Votre demande d'inscription a bien été envoyée</p>
+      <button>ok</button>
+    </div>
+    <div id="errorbox" class="errorbox">
+      <p>! Veuillez vérifier les données saisies</p>
+      <button>ok</button>
+    </div>
   </main>
   <footer>
     <p class="copyrights">
