--- a/index.html
+++ b/index.html
@@ -60,13 +60,12 @@
           <!--formulaire-->
           <form id="form" name="reserve" action="index.html" method="get">
             <!-- prenom -->
-            <div class="formData" data-error="Vous devez entrer 2 caractères ou plus." data-error-visible="false">
+            <div class="formData" data-error="Vous devez entrer 2 caractères ou plus (alphabétique)." data-error-visible="false">
               <label for="first">Prénom</label><br>
-              <input class="text-control success" type="text" id="first" name="first" minlength="2"
-                placeholder="Prénom" /><br>
+              <input class="text-control" type="text" id="first" name="first" minlength="2" placeholder="Prénom" /><br>
             </div>
             <!-- nom -->
-            <div class="formData" data-error="Vous devez entrer 2 caractères ou plus." data-error-visible="false">
+            <div class="formData" data-error="Vous devez entrer 2 caractères ou plus (alphabétique)." data-error-visible="false">
               <label for="last">Nom</label><br>
               <input class="text-control" type="text" id="last" name="last" placeholder="Nom" /><br>
             </div>
