--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <input class="text-control" type="email" id="email" name="email" placeholder="exemple@email.com" /><br>
             </div>
             <!-- anniversaire -->
-            <div class="formData" data-error="Vous devez entrer votre date de naissance." data-error-visible="false">
+            <div class="formData" data-error="Vous devez entrer votre date de naissance et être majeur pour participer." data-error-visible="false">
               <label for="birthdate">Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
             </div>
