--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <!-- tournoi -->
             <div class="formData" data-error="Veuillez saisir une valeur numérique." data-error-visible="false">
               <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" placeholder="0">
+              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" placeholder="">
             </div>
             <!-- villes -->
             <p class="text-label">Quelles villes ?</p>
