--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <!-- anniversaire -->
               <div
                 class="formData"
-                data-error="Vous devez entrer votre date de naissance."
+                data-error="Vous devez entrer votre date de naissance et être majeur."
                 data-error-visible="false"
               >
                 <label for="birthdate">Date de naissance</label><br />
